@@ -1,6 +1,7 @@
 package com.cinescope.api.services;
 
 import com.cinescope.api.ProjectConfig;
+import io.qameta.allure.restassured.AllureRestAssured;
 import io.restassured.RestAssured;
 import io.restassured.filter.Filter;
 import io.restassured.filter.log.RequestLoggingFilter;
@@ -18,16 +19,17 @@ public class ApiService {
     protected RequestSpecification setup() {
 
         return RestAssured
-                .given().contentType(ContentType.JSON)
+                .given()
+                .contentType(ContentType.JSON)
                 .filters(getFilters());
     }
 
     private List<Filter> getFilters(){
         ProjectConfig config = ConfigFactory.create(ProjectConfig.class, System.getProperties());
         if (config.logging()) {
-            return Arrays.asList(new RequestLoggingFilter(), new ResponseLoggingFilter());
+            return Arrays.asList(new RequestLoggingFilter(), new ResponseLoggingFilter(), new AllureRestAssured());
         }
-        return Collections.emptyList();
+        return List.of(new AllureRestAssured());
     }
 }
 
